--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,html,css}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,html,css,json}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
