--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
 	],
 	"rules": {
 	  "react/prop-types": 0,
-	  "react/react-in-jsx-scope": 0
+	  "react/react-in-jsx-scope": 0,
+      "import/no-named-as-default-member": 0
 	},
 	"env": {
 		"es6": true,
