--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "i18next": "^23.15.2",
+    "i18next-http-backend": "^2.6.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2"
   },
   "type": "module"
 }
